--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "vue": "^3.3.0",
     "vue-router": "4"
   },
   "devDependencies": {
